kubernetes/apps/sobok/chat/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chat
spec:
  selector:
    app.kubernetes.io/name: chat
  ports:
    - name: http
      port: 3003
      targetPort: http
